--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -63,7 +63,7 @@
   
   <!-- Main content -->
   <main role="main">
-      <div class="container">
+      <div id="container" class="container">
       <div class="row">
           <div class="col">
               
@@ -238,7 +238,7 @@
                     Ctrl+K Ctrl+S Keyboard Shortcuts<br>
                     Basic editing<br>
                     Ctrl+X Cut line (empty selection)<br></p>
-                  <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2023-05-23</small></p>
+                  <p class="card-text"><small class="text-muted">Submitted by Roger Fire on 2023-05-23</small></p>
                 </a>
 
                   <!-- Buttons -->
@@ -410,7 +410,7 @@
             - Pencil and eraser<br>
             - Reference images or objects<br>
           </p>
-          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2023-05-21</small></p>
+          <p class="card-text"><small class="text-muted">Submitted by Albert Smith on 2023-05-21</small></p>
         </a>
 
         <!-- Buttons -->
@@ -559,7 +559,7 @@
           </div>
         </div>
 
-        <!-- Post12 -->
+        <!-- Post13 -->
         <div class="post-card card mb-4">
           <div class="card-body">
           <a href="post13.html">
@@ -575,7 +575,7 @@
             <br>
             Step 2 − Download Python Executable Installer<br>
           </p>
-          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2023-05-21</small></p>
+          <p class="card-text"><small class="text-muted">Submitted by Michael Scott on 2023-05-21</small></p>
         </a>
 
 
