--- a/Profile.html
+++ b/Profile.html
@@ -72,7 +72,7 @@
             <div class="card-body" id="card-body">
               <h5 class="card-title">Profile</h5>
               <img src="static/images/avatar.jpg" alt="Profile Image" class="profile-image">
-              <p class="card-text"><b>Name:</b> Guilherme Casal</p>
+              <p class="card-text"><b>Name:</b> Jane Smith</p>
               <p class="card-text"><b>Occupation:</b> Developer</p>
             </div>
           </div>
@@ -112,62 +112,92 @@
             });
           </script>
 
-            <!-- Post1 -->
-              <div id="post" class="post-card card mb-4">
-                <div class="card-body" id="card-body">
-                <a href="post.html">
-                  <h5 id="post-title" class="card-title"></h5>
-                  <p id="post-content" class="card-text fixed-size">
-                  <p class="card-text"><small class="text-muted">Submitted by Guilherme Casal on 2022-05-11</small></p>
-                </a>
-                  <!-- Buttons -->
-                  <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group upvote" id="upvote1">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa fa-arrow-up"></i>
-                      </button>
-                    </div>
-                    <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count1">0</small></p>
-                    </div>
-                    <div class="btn-group downvote" id="downvote1">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa fa-arrow-down"></i>
-                      </button>
-                    </div>
+            <!-- Post4 -->
+            <div class="post-card card mb-4">
+              <div class="card-body">
+              <a href="post4.html">
+              <h5 class="card-title">How to install Python</h5>
+              <p class="card-text fixed-size">
+                In order to become Python developer, the first step is to learn how to install or update Python on a local machine or computer. In this tutorial, we will discuss the installation of Python on various operating systems.<br>
+                <br>
+                Installation on Windows<br>
+                Visit the link https://www.python.org/downloads/ to download the latest release of Python. In this process, we will install Python 3.8.6 on our Windows operating system. When we click on the above link, it will bring us the following page.<br>
+                <br>
+                Step - 1: Select the Python's version to download.<br>
+                <br>
+                Click on the download button.<br>
+                <br>
+                Python Environment Set-up<br>
+                Step - 2: Click on the Install Now<br>
+                <br>
+                </p>
+              <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2023-05-24</small></p>
+              <div class="d-flex flex-row justify-content-start align-items-center">
+              </a>
 
-                  </div>
-                  </div>
+              <!-- Buttons -->
+                <div class="btn-group upvote" id="upvote4">
+                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="">
+                    <i class="fa fa-arrow-up"></i>
+                  </button>
+                </div>
+                <div class="ml-2 mr-2">
+                  <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count4">10</small></p>
+                </div>
+                <div class="btn-group downvote" id="downvote4">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">
+                    <i class="fa fa-arrow-down"></i>
+                  </button>
+                </div>
+
               </div>
-
-
-            <!-- Post1 -->
-            <div id="post" class="post-card card mb-4">
-                <div class="card-body" id="card-body">
-                <a href="post.html">
-                  <h5 id="post-title" class="card-title"></h5>
-                  <p id="post-content" class="card-text fixed-size">
-                  <p class="card-text"><small class="text-muted">Submitted by Guilherme Casal on 2022-05-11</small></p>
-                </a>
-                  <!-- Buttons -->
-                  <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group upvote" id="upvote1">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa fa-arrow-up"></i>
-                      </button>
-                    </div>
-                    <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count1">0</small></p>
-                    </div>
-                    <div class="btn-group downvote" id="downvote1">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa fa-arrow-down"></i>
-                      </button>
-                    </div>
-
-                  </div>
-                  </div>
               </div>
+           
+          </div>
+
+
+           <!-- Post12 -->
+        <div class="post-card card mb-4">
+          <div class="card-body">
+          <a href="post12.html">
+          <h5 class="card-title">Mastering Sorting Algorithms: A Comprehensive Guide</h5>
+          <p id="demo" class="card-text fixed-size">
+            Introduction:<br>
+              In this tutorial, we'll dive into the world of sorting algorithms and explore the different techniques used to efficiently sort data. Sorting algorithms play a crucial role in computer science and are used to arrange elements in a specific order. Whether you're a beginner or have some programming experience, this comprehensive guide will introduce you to various sorting algorithms and help you understand their strengths and weaknesses.<br>
+              <br>
+              Topics Covered:<br>
+              <br>
+              1. What are sorting algorithms and why are they important?<br>
+              2. Understanding algorithm complexity and Big O notation<br>
+              3. The bubble sort algorithm<br>
+              4. The insertion sort algorithm<br>
+              5. The selection sort algorithm<br>
+              6. The merge sort algorithm<br>
+              7. The quicksort algorithm<br>
+          </p>
+          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2023-05-21</small></p>
+        </a>
+
+
+        <!-- Buttons -->
+          <div class="d-flex flex-row justify-content-start align-items-center">
+            <div class="btn-group upvote" id="upvote12">
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <i class="fa fa-arrow-up"></i>
+              </button>
+            </div>
+            <div class="ml-2 mr-2">
+              <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count12">12</small></p>
+            </div>
+            <div class="btn-group downvote" id="downvote12">
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <i class="fa fa-arrow-down"></i>
+              </button>
+            </div>
+
+          </div>
+          </div>
+        </div>
         
 
 
