--- a/edit.html
+++ b/edit.html
@@ -58,6 +58,11 @@
       <div class="card-body">
         <form class="form">
           <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" class="form-control" id="title" name="title" value="" required>
+          </div>
+          
+          <div class="mb-3">
             <label for="images" class="form-label">Images</label>
             <input type="file" class="form-control-file" id="images" name="images" accept="image/*" multiple>
           </div>
